--- a/pages/home.html
+++ b/pages/home.html
@@ -86,51 +86,51 @@
     <div class="block-vagas">
       <div class="vagas">
         <img src="../images/7067450_briefcase_bag_alternatif_icon 1.svg" alt="" />
-        <p>Negócios</p>
+        <a href="../pages/vagas.html?area=Negócios"><p>Negócios</p></a>
+        <!-- <p>Negócios</p> -->
       </div>
       <div class="vagas">
         <img src="../images/2633204_circuit_digital_tech_technology_icon 1.svg" alt="" />
-        <p>Tecnologia</p>
+        <a href="../pages/vagas.html?area=Tecnologia"><p>Tecnologia</p></a>
       </div>
       <div class="vagas">
         <img src="../images/4213476_apartment_architecture_building_city_company_icon 1.svg" alt="" />
-        <p>Administração</p>
+        <a href="../pages/vagas.html?area=Administração"><p>Administração</p></a>
       </div>
     </div>
 
     <div class="block-vagas">
       <div class="vagas">
         <img src="../images/290143_cash_money_payment_wallet_icon 1.svg" alt="" />
-        <p>Vendas</p>
+        <a href="../pages/vagas.html?area=Vendas"><p>Vendas</p></a>
       </div>
       <div class="vagas">
         <img src="../images/7830542_human_resources_search_employees_icon 1.svg" alt="" />
-        <p>RH</p>
+        <a href="../pages/vagas.html?area=RH"><p>RH</p></a>
       </div>
       <div class="vagas">
         <img src="../images/753891_lawyer_judge_justice_law_legal_icon 1.svg" alt="" />
-        <p>Jurídico</p>
-        <a href=""></a>
+        <a href="../pages/vagas.html?area=Jurídico"><p>Jurídico</p></a>
       </div>
     </div>
 
     <div class="block-vagas">
       <div class="vagas">
         <img src="../images/7898409_promotion_business_finance_office_marketing_icon 1.svg" alt="" />
-        <p>Marketing</p>
+        <a href="../pages/vagas.html?area=Marketing"><p>Marketing</p></a>
       </div>
       <div class="vagas">
         <img src="../images/172507_box_money_icon 1.svg" alt="" />
-        <p>Financeiro</p>
+        <a href="../pages/vagas.html?area=Financeiro"><p>Financeiro</p></a>
       </div>
       <div class="vagas">
         <img src="../images/9040420_heart_pulse_icon 1.svg" alt="" />
-        <p>Saúde</p>
+        <a href="../pages/vagas.html?area=Saúde"><p>Saúde</p></a>
       </div>
     </div>
 
     <button class="todasVagas">
-      Quero ver todas!
+      <a href="../pages/vagas.html">Quero ver todas!</a>
     </button>
   </div>
 
